--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.siroca.twiceapp">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,14 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TwiceApp">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.activity.splash.SplashActivity"
+            android:exported="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.activity.main.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
